Update Week2 (2) (1).ipynb

--- a/Week2 (2) (1).ipynb
+++ b/Week2 (2) (1).ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Drag Racing](https://raw.githubusercontent.com/ituitis-averbek18/images/master/week2_table1.png)"
+    "![Drag Racing](https://raw.githubusercontent.com/ituitis-averbek18/images/master/week2_table1.png) { width = %10 }"
    ]
   },
   {
